--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "kebabbo",
 	"version": "0.0.1",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -26,9 +27,12 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module",
 	"dependencies": {
+		"@types/mapbox-gl": "^3.1.0",
 		"@vercel/speed-insights": "^1.0.10",
-		"dotenv": "^16.4.5"
+		"dotenv": "^16.4.5",
+		"leaflet": "^1.9.4",
+		"mapbox-gl": "^3.2.0",
+		"svelte-leaflet": "^0.2.0"
 	}
 }
